<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notificationFragment"
    android:clickable="true"
    android:background="@color/white">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/notificationRelLayout"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notificationSubContainer">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/alata"
                android:text="Notification"
                android:textSize="23dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <View
            android:id="@+id/notificationLine0"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/notificationSubContainer"
            android:layout_marginTop="20dp"
            android:background="@color/grey" />

        <RelativeLayout
            android:id="@+id/notification1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/notificationLine0"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/notiHeader1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:text="@string/notiHeader1"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/notiTxt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/notiHeader1"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/abeezee"
                android:text="@string/notiTxt1"
                android:textColor="@color/grey_2" />
        </RelativeLayout>

        <View
            android:id="@+id/notificationLine1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/notification1"
            android:background="@color/grey" />

        <RelativeLayout
            android:id="@+id/notification2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/notificationLine1"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/notiHeader2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:text="@string/notiHeader2"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/notiTxt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/notiHeader2"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/abeezee"
                android:text="@string/notiTxt2"
                android:textColor="@color/grey_2" />

        </RelativeLayout>

        <View
            android:id="@+id/notificationLine2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/notification2"
            android:background="@color/grey" />

        <RelativeLayout
            android:id="@+id/notification3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/notificationLine2"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/notiHeader3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:text="@string/notiHeader3"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/notiTxt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/notiHeader3"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/abeezee"
                android:text="@string/notiTxt3"
                android:textColor="@color/grey_2" />

        </RelativeLayout>

        <View
            android:id="@+id/notificationLine3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/notification3"
            android:background="@color/grey" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>