<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <RelativeLayout
        android:id="@+id/helpRelLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp">

        <RelativeLayout
            android:id="@+id/helpSubContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="22dp"
            android:paddingRight="22dp">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_back_arrow_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/alata"
                android:text="Help"
                android:textSize="23sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <View
            android:id="@+id/helpLine0"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/helpSubContainer"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="22dp"
            android:background="@color/grey" />

        <ScrollView
            android:id="@+id/helpScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/helpLine0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/helpContainer"
                android:orientation="vertical"
                android:paddingTop="15dp"
                android:paddingLeft="22dp"
                android:paddingRight="22dp"
                android:paddingBottom="25dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata"
                    android:text="FAQ"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:id="@+id/faqHeader" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/faqContainer"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:id="@+id/ques1Container">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/abeezee"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/ques1"
                            android:textSize="13sp" />

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_back_arrow"
                            android:id="@+id/ques1Arrow" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/abeezee"
                        android:text="@string/ans1"
                        android:textColor="@color/grey_2"
                        android:textSize="13sp"
                        android:visibility="gone"
                        android:id="@+id/ans1"/>

                    <View
                        android:id="@+id/helpLine1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:id="@+id/ques2Container">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/abeezee"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/ques2"
                            android:textSize="13sp" />

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_back_arrow"
                            android:id="@+id/ques2Arrow" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/abeezee"
                        android:text="@string/ans2"
                        android:textColor="@color/grey_2"
                        android:textSize="13sp"
                        android:visibility="gone"
                        android:id="@+id/ans2"/>

                    <View
                        android:id="@+id/helpLine2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:id="@+id/ques3Container">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/abeezee"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/ques3"
                            android:textSize="13sp" />

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_back_arrow"
                            android:id="@+id/ques3Arrow" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/abeezee"
                        android:text="@string/ans3"
                        android:textColor="@color/grey_2"
                        android:textSize="13sp"
                        android:visibility="gone"
                        android:id="@+id/ans3"/>

                    <View
                        android:id="@+id/helpLine3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:id="@+id/ques4Container">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/abeezee"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/ques4"
                            android:textSize="13sp" />

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_back_arrow"
                            android:id="@+id/ques4Arrow" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/abeezee"
                        android:text="@string/ans4"
                        android:textColor="@color/grey_2"
                        android:textSize="13sp"
                        android:visibility="gone"
                        android:id="@+id/ans4"/>

                    <View
                        android:id="@+id/helpLine4"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:id="@+id/ques5Container">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/abeezee"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/ques5"
                            android:textSize="13sp" />

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_back_arrow"
                            android:id="@+id/ques5Arrow" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:fontFamily="@font/abeezee"
                        android:text="@string/ans5"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/grey_2"
                        android:textSize="13sp"
                        android:visibility="gone"
                        android:id="@+id/ans5"/>

                    <View
                        android:id="@+id/helpLine5"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>